--- a/index.html
+++ b/index.html
@@ -5,7 +5,198 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Resume | Mustafa Kumshi</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+      integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="left-side">
+        <div class="profiletext">
+          <div class="imgbx">
+            <img src="images/image1.png" alt="Photo" />
+          </div>
+          <h2>Mustafa Kumshi<br /><span>Web Developer</span></h2>
+        </div>
+
+        <div class="contactinfo">
+          <h3 class="title">Contact Info</h3>
+          <ul>
+            <li>
+              <span class="icon"
+                ><i class="fa fa-phone" aria-hidden="true"></i
+              ></span>
+              <span class="text">+91 8879879374</span>
+            </li>
+            <li>
+              <span class="icon"
+                ><i class="fa fa-envelope-o" aria-hidden="true"></i
+              ></span>
+              <span class="text">kumshimustafa0@gmail.com</span>
+            </li>
+            <li>
+              <span class="icon"
+                ><i class="fa fa-github" aria-hidden="true"></i
+              ></span>
+              <span class="text">https://github.com/mustafakumshi</span>
+            </li>
+            <li>
+              <span class="icon"
+                ><i class="fa fa-linkedin" aria-hidden="true"></i
+              ></span>
+              <span class="text">www.linkedin.com/in/mustafakumshi</span>
+            </li>
+            <li>
+              <span class="icon"
+                ><i class="fa fa-map-marker" aria-hidden="true"></i
+              ></span>
+              <span class="text">Mumbai, Maharashtra, India</span>
+            </li>
+          </ul>
+        </div>
+
+        <div class="contactinfo education">
+          <h3 class="title">Education</h3>
+          <ul>
+            <li>
+              <h5>2017 - 2020</h5>
+              <h4>Bachelor in Mechanical Engineering</h4>
+              <h4>University of Mumbai</h4>
+            </li>
+            <li>
+              <h5>2014 - 2017</h5>
+              <h4>Diploma in Mechanical Engineering</h4>
+              <h4>Maharashtra State Board of Technical Education</h4>
+            </li>
+            <li>
+              <h5>2004 - 2014</h5>
+              <h4>Matriculation</h4>
+              <h4>Guru Nanak English High School</h4>
+            </li>
+          </ul>
+        </div>
+
+        <div class="contactinfo languages">
+          <h3 class="title">Languages</h3>
+          <ul>
+            <li>
+              <span class="text">English</span>
+              <div class="percent"><div style="width: 85%"></div></div>
+            </li>
+            <li>
+              <span class="text">Hindi</span>
+              <div class="percent"><div style="width: 90%"></div></div>
+            </li>
+            <li>
+              <span class="text">Marathi</span>
+              <div class="percent"><div style="width: 85%"></div></div>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="right-side">
+        <div class="about">
+          <h2 class="title2">Profile</h2>
+          <p>
+            Passionate, Self-taught web developer who enjoys making things happen with HTML and CSS.<br><br>
+             Strong interest in exploring new technologies and a unique ability to gather domain-specific knowledge to keep up with industry standards. 
+          </p>
+        </div>
+
+        <div class="about">
+          <h2 class="title2">Experience</h2>
+          <div class="box">
+            <div class="year-company">
+              <h5>2021 - 2022<br> (15 Months)</h5>
+              <h5>KUCHE7 MANUFACTURING<br>PVT LTD</h5>
+            </div>
+            <div class="text">
+              <h4>Production Engineer</h4>
+              <p>
+               Planned and priotized operations to ensure maximum performance and minimum delay.<br>Monitored Production progress and ensured that final product meets quality standards and 
+               customer specifications.
+              </p>
+            </div>
+          </div>
+
+          <div class="box">
+            <div class="year-company">
+              <h5>2021 - 2021<br> (15 Days)</h5>
+              <h5>GALEXON <br>ENGINEERING <br>INDUSTRIES</h5>
+            </div>
+            <div class="text">
+              <h4>Engineering Intern</h4>
+              <p>
+                Designed and Drafted various Industrial Components using SolidWorks. <br>
+                Applied Material and Estimated Cost for the same.
+              </p>
+            </div>
+          </div>
+
+          <div class="box">
+            <div class="year-company">
+              <h5>2019 - 2019 <br> (2 Months)</h5>
+              <h5>AC ENGINEERING</h5>
+            </div>
+            <div class="text">
+              <h4>Engineering Intern</h4>
+              <p>
+                Studied and made Projects on Continuous Casting Machine, EOT Cranes, Refractories, Steel Melting Industrial Equipment.
+              </p>
+            </div>
+          </div>
+        </div>
+<br>
+        <div class="about skills">
+          <h2 class="title2">Professional Skills</h2>
+          <div class="box">
+            <h4>CSS</h4>
+            <div class="percent">
+              <div style="width: 80%"></div>
+            </div>
+          </div>
+          <div class="box">
+            <h4>HTML</h4>
+            <div class="percent">
+              <div style="width: 85%"></div>
+            </div>
+          </div>
+          <div class="box">
+            <h4>Solidworks</h4>
+            <div class="percent">
+              <div style="width: 85%"></div>
+            </div>
+          </div>
+          <div class="box">
+            <h4>AutoCad</h4>
+            <div class="percent">
+              <div style="width: 90%"></div>
+            </div>
+          </div>
+          <div class="box">
+            <h4>MS Office</h4>
+            <div class="percent">
+              <div style="width: 90%"></div>
+            </div>
+          </div>
+        </div>
+<br>
+        <div class="about interest">
+          <h2 class="title2">Interest</h2>
+          <ul>
+            <li><i class="fa fa-gamepad" aria-hidden="true"></i>Gaming</li>
+            <li><i class="fa fa-music" aria-hidden="true"></i>Music</li>
+            <li><i class="fa fa-book" aria-hidden="true"></i></i>Reading</li>
+            <li><i class="fa fa-pencil" aria-hidden="true"></i></i>Writing</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
