--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
         <div class="about">
           <h2 class="title2">Profile</h2>
           <p>
-            Passionate, Self-taught web developer who enjoys making things happen with HTML and CSS.<br><br>
-             Strong interest in exploring new technologies and a unique ability to gather domain-specific knowledge to keep up with industry standards. 
+            Front End Learner who enjoys making things happen with HTML CSS and JavaScript, seeking an entry-level developer role where I can utilise my knowledge and my strong analytical skills to be a valuable asset to the company. <br><br> Strong interest in exploring new technologies and a unique ability to gather domain-specific knowledge to keep up with industry standards.
           </p>
         </div>
 
@@ -156,6 +155,12 @@
         <div class="about skills">
           <h2 class="title2">Professional Skills</h2>
           <div class="box">
+            <h4>JavaScript</h4>
+            <div class="percent">
+              <div style="width: 65%"></div>
+            </div>
+          </div>
+          <div class="box">
             <h4>CSS</h4>
             <div class="percent">
               <div style="width: 80%"></div>
@@ -171,12 +176,6 @@
             <h4>Solidworks</h4>
             <div class="percent">
               <div style="width: 85%"></div>
-            </div>
-          </div>
-          <div class="box">
-            <h4>AutoCad</h4>
-            <div class="percent">
-              <div style="width: 90%"></div>
             </div>
           </div>
           <div class="box">
